# git-hooks

./: .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml
hooks/obsidian/: post-merge  pre-commit  pre-push
