[project]
name = "git-hooks"
version = "0.2.0"
description = "一个不起眼的钩子"
readme = "README.md"
# requires-python = ">=3.13"
dependencies = []

[tool.commitizen]
name = "cz_gitmoji"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
